--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -109,6 +109,7 @@ body {
 
                 img {
                     border-radius: 30px 0;
+                    transition: all .3s ease-in-out;
                 }
 
                 h5 {
@@ -122,8 +123,33 @@ body {
             }
 
             &:hover {
-                box-shadow: 0 0 10px silver;
+                box-shadow: 0 0 10px rgba(192, 192, 192, 0.445);
+
+                .card-body {
+
+                    img {
+                        transform: rotate(-4deg) scale(1.1);
+                    }
+                }
             }
         }
+    }
+
+    .seeUser {
+        padding: 100px 0;
+
+        img {
+            border-radius: 0 100px ;
+        }
+
+        h3 {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        a {
+            font-size: 20px;
+        }
+
     }
 }
