--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -160,7 +160,7 @@ body {
     }
 
     .login, .register {
-        height: 80vh;
+        height: 55vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -179,5 +179,10 @@ body {
             }
 
         }
+    }
+
+    .profile {
+        padding: 50px 0;
+        
     }
 }
